Adding default rule support for subscription creation (#31804)
* Adding default rule support for subscription creation

* Removing notes

* More fixes to sync admin client + session recordings of the new test suite for sync admin client

* checkstyle things